...
        android:layout_height="wrap_content"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/track_add_track"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_album_to_artist"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/album_add_album"
        android:visible="false"
        app:showAsAction="always"/>
    <item
...
