...
            android:layout_gravity="bottom"
            android:enabled="true"
            android:gravity="start"
            android:text="@string/action_cancel" />

        <Button
            android:id="@+id/saveAlbum"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:enabled="true"
            android:gravity="end"
...
